--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
           </div>
         </div>
 
-        <h2><u>Montages vidéo :</u></h2>
+        <h2><u>Montages vidéo :</u>(qualtié des vidéos altérée car compression web)</h2>
          <div class="videos">
           <div class="video">
             <video controls width="300">
