--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
           </div>
         </div>
 
-        <h2><u>Montages vidéo :</u> (qualité des vidéos altérée car compression web)</h2>
+        <h2><u>Montages vidéo :</u></h2>
          <div class="videos">
           <div class="video">
             <video controls width="300">
@@ -195,7 +195,7 @@
       <footer>
         <div id="footer">
           <div class="titre">
-            <h3>Me contacter :</h3>
+            <h3>Me contacter</h3>
           </div>
           <div class="mail">
             <a href="mailto:quentinlobello39@gmail.com">quentinlobello39@gmail.com</a>
