--- a/index.html
+++ b/index.html
@@ -68,12 +68,12 @@
             <h1>ENSEIGNEMENT</h1>
           </div> 
           <div class="grid">
-            <div>Septembre 2020 – Avril 2021</div>
-            <div>Lycée Pasteur Mont Roland <br>Dole<br><br>8 mois en BTS Services informatiques <br>aux organisations option développement <br>en alternance chez Colruyt.</div>
-            <div><br>Septembre 2017 – Juillet 2020</div>
-            <div><br>Lycée Polyvalent Hyacinthe Friant<br>Poligny<br><br>3 ans dans ce lycée avec obtention du Baccalauréat Economique et Social.</div>   
-            <div><br>Septembre 2013 – Juillet 2017</div>
-            <div><br>Collège Jules Grévy<br>Poligny<br><br>4 ans dans ce collège avec obtention du Diplôme National du Brevet.</div>   
+            <div><h2>Septembre 2020 – Avril 2021</div>
+            <div><h2>Lycée Pasteur Mont Roland <br>Dole</h2><br><br>8 mois en BTS Services informatique <br>aux organisations option développement <br>en alternance chez Colruyt.<br>Analyse besoins client, établir un cahier des charges, Illustrator, Dévelloppement informatique<br><i>( HTML / CSS, PHP, MySQL, C#, Visual Basic )</i></div>
+            <div><br><h2>Septembre 2017 – Juillet 2020</div>
+            <div><br><h2>Lycée Polyvalent Hyacinthe Friant<br>Poligny</h2><br><br>3 ans dans ce lycée avec obtention du Baccalauréat Economique et Social.</div>   
+            <div><br><h2>Septembre 2013 – Juillet 2017</div>
+            <div><br><h2>Collège Jules Grévy<br>Poligny</h2><br><br>4 ans dans ce collège avec obtention du Diplôme National du Brevet.</div>   
           </div>
         </div>
         <div class="experience">
@@ -82,12 +82,14 @@
             <h1>EXPERIENCE</h1>
           </div> 
           <div class="grid">
-          <div>Septembre 2021 – A ce jour</div>
-          <div>Sertisseur, Manutentionnaire<br>DAGIER, Poligny<br><br>Sertisseur et Manutentionnaire en intérim.</div>
-          <div><br>Mai 2021 – Aout 2021</div>
-          <div><br>Préparateur magasinier<br>V33, Domblans<br><br>Prérateur magasinier en intérim.</div>
-          <div><br>Septembre 2020 – Avril 2021</div>
-          <div><br>Solution Analyst<br>COLRUYT, Rochefort-sur-Nenon<br><br>Solution Analyst pendant mon alternance<br>en BTS SIO.</div>   
+          <div><h2>Janvier 2022 – A ce jour</div>
+          <div><h2>Cariste / Préparateur de commandes<br>V33, Domblans</h2><br><br>Triez et rangez, Port de charges, alimenter un atelier, saisie de données informatiques, controle de stock, chargement , déchargement, préparation de commandes</div>
+          <div><h2>Septembre 2021 – Décembre 2021</div>
+          <div><h2>Sertisseur, Manutentionnaire<br>DAGIER, Poligny</h2><br><br>Fabrication, manutention diverses</div>
+          <div><br><h2>Mai 2021 – Aout 2021</div>
+          <div><br><h2>Préparateur magasinier<br>V33, Domblans</h2><br><br>Triez et rangez, Port de charges, alimenter un atelier, saisie de données informatiques, controle de stock</div>
+          <div><br><h2>Septembre 2020 – Avril 2021</div>
+          <div><br><h2>Solution Analyst (en alternance)<br>COLRUYT, Rochefort-sur-Nenon</h2><br><br>Analyse besoins client, établir un cahier des charges, programmation informatique <br><i>(Excel Visual Basic)</i></div>   
           </div>
         </div>
         <div class="doneesperso">
