--- a/index.html
+++ b/index.html
@@ -82,9 +82,9 @@
             <h1>EXPERIENCE</h1>
           </div> 
           <div class="grid">
-          <div><h2>Janvier 2022 – A ce jour</div>
+          <div><h2>Janvier 2022 – À ce jour</div>
           <div><h2>Cariste / Préparateur de commandes<br>V33, Domblans</h2><br><br>Triez et rangez, Port de charges, alimenter un atelier, saisie de données informatiques, controle de stock, chargement , déchargement, préparation de commandes</div>
-          <div><h2>Septembre 2021 – Décembre 2021</div>
+          <div><h2>Septembre – Décembre 2021</div>
           <div><h2>Sertisseur, Manutentionnaire<br>DAGIER, Poligny</h2><br><br>Fabrication, manutention diverses</div>
           <div><br><h2>Mai 2021 – Aout 2021</div>
           <div><br><h2>Préparateur magasinier<br>V33, Domblans</h2><br><br>Triez et rangez, Port de charges, alimenter un atelier, saisie de données informatiques, controle de stock</div>
